Nearly finished the scrollbar functionality for fixed left sidebar

--- a/app/assets/stylesheets/release.css.scss
+++ b/app/assets/stylesheets/release.css.scss
@@ -51,6 +51,34 @@
 			}
 		}
 	}
+	.scrollable {
+		overflow:hidden !important;
+		width:215px;
+			.scrollable_inner {
+				overflow-x:hidden;
+				width:235px;
+			}
+			.scrollbar {
+				opacity:0;
+				filter: alpha(opacity=0);
+				width:5px;
+				@include border-radius(5px);
+				background-color:rgba(0,0,0,0.5);
+				@include transition-property(opacity);
+				@include transition-duration(0.4s);
+				@include transition-timing-function(linear);
+				top:0px;
+				position:absolute;
+				right:2px;
+				height:300px;
+				display:none;
+			}
+			.scrollbar_visible {
+				opacity:1;
+				filter: alpha(opacity=100);
+			}
+
+	}
 }
 .release_info {
 	.image {
