--- a/app/assets/stylesheets/styling.css.scss
+++ b/app/assets/stylesheets/styling.css.scss
@@ -58,3 +58,15 @@ header {
 	margin:30px 0 0;
 	display:none;
 }
+.field_with_errors {
+	.message {
+		font-size:13px;
+		color:red;
+	}
+	input {
+border-color: #b94a48 !important;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392!important;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392!important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392!important;
+	}
+}
